# teg

./: .envrc  .gitignore  CHANGELOG.md  Dockerfile-release  Dockerfile-test  Makefile  Procfile  README.md  builder.sh  default.nix  index.html  package-lock.json  package.json  release.nix  shell.nix  stack.yaml  teg.cabal  teg.nix
.circleci/: Dockerfile-release  config.yml
app/: Main.hs
frontend/src/: Country.elm
nix/: builder.sh  docker_image.nix  ghc.nix  sources.json  teg.nix
server/: LICENSE  server.cabal  stack.yaml
server/app/: Main.hs
server/src/: Lib.hs
src/: Board.elm  Channel.hs  Codegen.hs  Country.elm  Game.hs  Lib.hs  Main.elm  Result.hs  Server.hs  board.css  board.js
src/Client/: ConnectionStates.hs  Game.hs  Room.hs
src/Game/: Color.hs  Country.hs  LocalState.hs  Player.hs  Room.hs  TurnList.hs
src/Game2/: Room.hs
src/Server/: Flags.hs  FullDuplexWebSocket.hs  PostRedirect.hs  Serialization.hs  State.hs  Templates.hs  WebSocket.hs
ui/: elm.json  package-lock.json
ui/src/: Board.elm  Color.elm  Country.elm  GameState.elm  Gameplay.elm  Homepage.elm  Main.elm  Player.elm
ui/src/Ui/: Button.elm  Color.elm  Modal.elm  Theme.elm
ui/static/: app.js  board.js  home.js  index.html
