name:                teg
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/juanedi/teg#readme
license:             BSD3
license-file:        LICENSE
author:              Juan Edi
maintainer:          jedi1235@gmail.com
copyright:           Juan Edi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codegen
                     , Server
  other-modules:       Game
                     , Game.Country
                     , Game.LocalState
                     , Game.Player
                     , Server.Serialization
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , casing
                     , conduit
                     , containers
                     , elm-bridge
                     , http-api-data
                     , process
                     , servant
                     , servant-elm
                     , servant-server
                     , servant-websockets
                     , stm
                     , text
                     , wai
                     , wai-logger
                     , warp
  default-language:    Haskell2010

executable teg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , teg
  default-language:    Haskell2010

test-suite teg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , teg
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/juanedi/teg
