name:                teg
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/juanedi/teg#readme
license:             BSD3
license-file:        LICENSE
author:              Juan Edi
maintainer:          jedi1235@gmail.com
copyright:           Juan Edi
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -fwarn-unused-imports -Wno-name-shadowing
  exposed-modules:     Codegen
                     , Server
  other-modules:       Client.Game
                     , Client.Room
                     , Client.ConnectionStates
                     , Game
                     , Game.Country
                     , Game.Color
                     , Game.Room
                     , Game.TurnList
                     , Game.Room
                     , Result
                     , Server.Serialization
                     , Server.WebSocket
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , async
                     , bytestring
                     , casing
                     , conduit
                     , containers
                     , directory
                     , elm-bridge
                     , fast-logger
                     , filepath
                     , http-api-data
                     , process
                     , servant
                     , servant-server
                     , servant-websockets
                     , stm
                     , text
                     , wai
                     , wai-app-static
                     , wai-logger
                     , warp
                     , websockets
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable teg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , teg
  default-language:    Haskell2010

test-suite teg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , teg
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/juanedi/teg
